--- a/.config/sway/config
+++ b/.config/sway/config
@@ -17,7 +17,7 @@ set $right l
 set $term kitty -e zellij
 set $scratchpad_term alacritty
 # Your preferred application launcher
-set $menu rofi --config ~/.config/rofi/config-wl.rasi -show run
+set $menu rofi -show run -theme-str 'window { width: 30%; x-offset: 20%; y-offset: -25px; }'
 default_border pixel
 hide_edge_borders --i3 smart
 workspace_layout tabbed
@@ -260,10 +260,11 @@ for_window [app_id="habits"]  move scratchpad, resize set width 1200, scratchpad
 for_window [app_id="wasistlos"]  move scratchpad, resize set width 1200, scratchpad show
 mode "scratchpad" {
     #bindsym c exec sh -c 'swaymsg [app_id="dropdown_math"] scratchpad show || exec $scratchpad_term --class dropdown_math -e python -q', mode "default"
-    bindsym c exec --no-startup-id "sway-scratchpad -tmt -atc -d 50%x30% -- foot -T dropdown_math -e python -q", mode "default"
+    bindsym g exec --no-startup-id "sway-scratchpad -tmt -atc -d 50%x30% -- foot -T dropdown_math -e python -q", mode "default"
     bindsym n exec --no-startup-id "sway-scratchpad -tmt -atc -d 90%x70% -- foot -T notes -e nvim ~/.notes/index.norg", mode "default"
     bindsym h exec --no-startup-id "sway-scratchpad -tmt -atc -d 90%x70% -- foot -T notes -e nvim ~/.notes/habits.norg", mode "default"
     bindsym m exec --no-startup-id "sway-scratchpad -tmt -atc -d 90%x90% -- foot -T monitor -e btop", mode "default"
+    bindsym c exec --no-startup-id "sway-scratchpad -tmt -atc -d 90%x90% -- foot -T monitor -e cmus", mode "default"
     bindsym t exec --no-startup-id "sway-scratchpad -tmt -atc -d 50%x90% -p -180,0 -m left -- foot -T todo -e taskwarrior-tui", mode "default"
     bindsym w exec --no-startup-id "sway-scratchpad -tmt -atc -d 90%x90% -- wasistlos", mode "default"
     bindsym u exec --no-startup-id "sway-scratchpad -tmt -atc -d 90%x60% -p 0,20 -- alacritty --config-file ~/.config/alacritty/scratchpad.toml --class dropdown_term -e bash -c 'zellij attach --create scratch'", mode "default"
@@ -285,7 +286,7 @@ bar {
 
     # When the status_command prints a new line to stdout, swaybar updates.
     # The default just shows the current date and time.
-    swaybar_command "waybar --config ~/.config/waybar/sway-waybar.jsonc"
+    swaybar_command "waybar"
 
     colors {
         statusline #ffffff
