changed sway mode position

--- a/.config/waybar/hypr-waybar.jsonc
+++ b/.config/waybar/hypr-waybar.jsonc
@@ -13,7 +13,7 @@
     "hyprland/submap",
     "custom/easy",
     "custom/tabbed",
-    "custom/variant",
+//    "custom/variant",
     "custom/updates",
     "custom/cpu-temp",
     "custom/disk-home",
