--- a/.config/waybar/config.jsonc
+++ b/.config/waybar/config.jsonc
@@ -1,68 +1,67 @@
-{
-  "layer": "bottom",
-  "modules-center": ["sway/workspaces"],
-  "modules-left": [
-    "pulseaudio",
-    "custom/pymor",
-    "custom/stretch",
-    "custom/cpu",
-    "custom/mem",
-    "custom/disk-root",
-    "custom/gameon",
-  ],
-  "modules-right": [
-    "sway/mode",
-    "custom/easy",
-    //"custom/tabbed",
-    //"custom/variant",
-    "custom/updates",
-    "custom/cpu-temp",
-    "custom/disk-home",
-    "custom/disk-hdd",
-    "clock",
-      ],
-  "sway/workspaces": {
-    "all-outputs": true,
-    "active-only": false,
-    "format": "{icon}",
-    "format-icons": {
-      "1": "",
-      "2": " ",
-      "3": " ",
-      "4": "",
-      "5": " ",
-      "6": " ",
-      "7": "",
-      "urgent": " ",
-      "default": " ",
+[{
+  "layer": "top",
+  "name": "bar1",
+	"output": "HDMI-A-1", 
+    "modules-left": [
+        "sway/workspaces", 
+        "custom/gameon",
+        "custom/cpu",
+        "custom/cpu-temp",
+        "custom/mem",
+        "custom/disk-root",
+    ],
+    "modules-right": [
+        "sway/mode",
+        "custom/easy",
+        "custom/ds4_bat",
+        "pulseaudio",
+        "custom/pymor",
+        "custom/separator",
+    //    "custom/variant",
+        "clock",
+        ],
+
+    "sway/workspaces": {
+        "disable-scroll": true,
+        "all-outputs": false,
+        "format": "{icon}",
+        "format-icons": {
+            "1": "",
+            "2": "",
+            "3": "",
+
+            "urgent": "",
+            "default": "",
+        },
+        "persistent-workspaces": {
+            "1": ["HDMI-A-1"], // Always show a workspace with name '3', on all outputs if it does not exists
+            "2": ["HDMI-A-1"], // Always show a workspace with name '3', on all outputs if it does not exists
+            "3": ["HDMI-A-1"], // Always show a workspace with name '3', on all outputs if it does not exists
+        }
     },
-    "persistent-workspaces": {
-        "1": [], // Always show a workspace with name '3', on all outputs if it does not exists
-        "2": [], // Always show a workspace with name '3', on all outputs if it does not exists
-        "3": [], // Always show a workspace with name '3', on all outputs if it does not exists
-        "4": [], // Always show a workspace with name '3', on all outputs if it does not exists
-        "5": [], // Always show a workspace with name '3', on all outputs if it does not exists
-        "6": [], // Always show a workspace with name '3', on all outputs if it does not exists
-        "7": [], // Always show a workspace with name '3', on all outputs if it does not exists
-    }
-  },
-  "clock": {
-    "interval": 60,
-    "format": "<span rise='5000' size='11000'></span> <span rise='3500'>{:%H:%M <span size='15000' foreground='#4c566a'>|</span> %d <span size='15000' foreground='#4c566a'>|</span> %a}</span>",
-    "tooltip": false
-  },
-  "hyprland/submap": {
-    "format": " <span size='14000' foreground='#4c566a'>|</span> ",
-    "tooltip": false
-  },
-  "custom/gameon": {
-    "exec": "/home/digo/.config/waybar/scripts/custom_widgets.py gameon",
-    "interval": 1,
+"custom/gameon": {
+    "exec": "/home/digo/.config/waybar/custom_widgets/gameon.sh",
+    "interval": 2,
     "return-type": "json",
     "tooltip": false
   },
+"sway/mode": {
+    "format": "<span size='12000' rise='5000'></span> <span size='14000' foreground='#4c566a' rise='6000'>| </span>",
+},
+"clock": {
+    "interval": 60,
+    "format": "<span rise='5000' size='11000'></span> <span rise='3500'>{:%H:%M <span size='15000' foreground='#4c566a'>|</span> %a}</span>",
+    "tooltip": false
+  },
+  "custom/ds4_bat": {
+    "exec": "/home/digo/.config/waybar/custom_widgets/ds4_bat.sh",
+    "interval": 1,
+    "return-type": "json",
+    "on-click-middle": "dsbattery -d",
+    "tooltip": false
+  },
   "custom/easy": {
-    "exec": "/home/digo/.config/waybar/scripts/custom_widgets.py easy",
+    "exec": "/home/digo/.config/waybar/custom_widgets/easyeffects.sh",
     "interval": 2,
     "return-type": "json",
     "tooltip": false
@@ -71,27 +70,6 @@
     "format":"|",
     "interval": 3600
   },
-  "custom/tabbed": {
-    "exec": "/home/digo/.config/waybar/scripts/tabbed.py",
-    "on-click": "hyprctl dispatch changegroupactive f",
-    "on-click-right": "hyprctl dispatch changegroupactive b",
-    "interval": 1,
-    "return-type": "json",
-    "tooltip": false
-  },
-  "custom/variant": {
-    "exec": "/home/digo/.config/waybar/scripts/custom_widgets.py variant",
-    "interval": 1,
-    "return-type": "json",
-    "tooltip": false
-  },
-  "custom/updates": {
-    "exec": "/home/digo/.config/waybar/scripts/custom_widgets.py updates",
-    "interval": 60,
-    "return-type": "json",
-    "tooltip": false,
-    "signal": 30
-  },
   "custom/stretch": {
     "exec": "/home/digo/.config/waybar/scripts/custom_widgets.py stretch",
     "interval": 2,
@@ -99,10 +77,10 @@
     "tooltip": false
   },
   "custom/pymor": {
-    "exec": "/home/digo/.config/waybar/scripts/custom_widgets.py pomodoro",
+    "exec": "/home/digo/.config/waybar/custom_widgets/pomo.sh",
     "interval": 1,
     "on-click": "pomodoro.py",
-    "on-click-middle": "touch /tmp/pomo_cancel",
+    "on-click-middle": "touch /tmp/pomo_cancel; rm /tmp/pomo_timer",
     "return-type": "json",
     "tooltip": false
   },
@@ -132,39 +110,131 @@
     "ignored-sinks": ["Easy Effects Sink"]
   },
   "custom/cpu-temp": {
-    "exec": "/home/digo/.config/waybar/scripts/custom_widgets.py temp",
-    "interval": 10,
+    "exec": "/home/digo/.config/waybar/custom_widgets/temp.sh",
+    "interval": 2,
     "return-type": "json",
     "tooltip": false
   },
   "custom/cpu": {
-    "exec": "/home/digo/.config/waybar/scripts/custom_widgets.py cpu",
+    "exec": "/home/digo/.config/waybar/custom_widgets/cpu.sh",
     "interval": 2,
     "return-type": "json",
     "tooltip": false
   },
   "custom/mem": {
-    "exec": "/home/digo/.config/waybar/scripts/custom_widgets.py mem",
+    "exec": "/home/digo/.config/waybar/custom_widgets/mem.sh",
     "interval": 4,
     "return-type": "json",
     "tooltip": false
   },
   "custom/disk-root": {
-    "exec": "/home/digo/.config/waybar/scripts/custom_widgets.py root",
+    "exec": "/home/digo/.config/waybar/custom_widgets/root.sh",
     "interval": 1,
     "return-type": "json",
     "tooltip": false
   },
+}, {
+    "layer": "top",
+    "name": "bar2",
+    "output": "VGA-1",
+    "modules-left": [
+        "sway/workspaces", 
+    ],
+    "modules-right": [
+        "sway/mode",
+        "custom/easy",
+    //    "custom/variant",
+        "custom/updates",
+        "custom/disk-home",
+        "custom/disk-hdd",
+        "clock",
+        ],
+    "sway/workspaces": {
+        "disable-scroll": true,
+        "all-outputs": false,
+        "format": "{icon}",
+        "format-icons": {
+            "4": "",
+            "5": "",
+            "6": "",
+            "7": "",
+            "8": "",
+
+            "urgent": "",
+            "default": "",
+        },
+        "persistent-workspaces": {
+            "4": ["VGA-1"], // Always show a workspace with name '3', on all outputs if it does not exists
+            "5": ["VGA-1"], // Always show a workspace with name '3', on all outputs if it does not exists
+            "6": ["VGA-1"], // Always show a workspace with name '3', on all outputs if it does not exists
+            "7": ["VGA-1"], // Always show a workspace with name '3', on all outputs if it does not exists
+            "8": ["VGA-1"], // Always show a workspace with name '3', on all outputs if it does not exists
+        }
+    },
+  "sway/mode": {
+        "format": " | ",
+  },
+  "clock": {
+    "interval": 60,
+    "format": "<span rise='5000' size='11000'></span> <span rise='3500'>{:%H:%M <span size='15000' foreground='#4c566a'>|</span> %d <span size='15000' foreground='#4c566a'>|</span> %a}</span>",
+    "tooltip": false
+  },
+  "hyprland/submap": {
+    "format": " <span size='14000' foreground='#4c566a'>|</span> ",
+    "tooltip": false
+  },
+  "custom/separator": {
+    "format":"|",
+    "interval": 3600
+  },
+  "custom/variant": {
+    "exec": "/home/digo/.config/waybar/scripts/custom_widgets.py variant",
+    "interval": 1,
+    "return-type": "json",
+    "tooltip": false
+  },
+  "custom/updates": {
+    "exec": "/home/digo/.config/waybar/custom_widgets/check_update.sh",
+    "interval": 60,
+    "return-type": "json",
+    "tooltip": false,
+    "signal": 30
+  },
+  "pulseaudio": {
+    "format": "<span rise='1000'>{icon}</span> {volume}%",
+    "format-bluetooth": "{icon} {volume}%",
+    "format-muted": "",
+    "format-icons": {
+      "alsa_output.pci-0000_00_1f.3.analog-stereo": "",
+      "alsa_output.pci-0000_00_1f.3.analog-stereo-muted": "",
+      "headphone": "",
+      "hands-free": "",
+      "headset": "",
+      "phone": "",
+      "phone-muted": "",
+      "portable": "",
+      "car": "",
+      "default": ["", ""]
+    },
+    "scroll-step": 1,
+    "states": {
+      "normal": 40,
+      "warning": 50,
+      "critical": 100
+    },
+    "on-click": "pavucontrol",
+    "ignored-sinks": ["Easy Effects Sink"]
+  },
   "custom/disk-home": {
-    "exec": "/home/digo/.config/waybar/scripts/custom_widgets.py home",
+    "exec": "/home/digo/.config/waybar/custom_widgets/home.sh",
     "interval": 1,
     "return-type": "json",
     "tooltip": false
   },
   "custom/disk-hdd": {
-    "exec": "/home/digo/.config/waybar/scripts/custom_widgets.py hdd",
+    "exec": "/home/digo/.config/waybar/custom_widgets/hdd.sh",
     "interval": 1,
     "return-type": "json",
     "tooltip": false
   }
-}
+}]
