--- a/.config/waybar/config.jsonc
+++ b/.config/waybar/config.jsonc
@@ -14,6 +14,7 @@
         "sway/mode",
         "custom/easy",
         "custom/ds4_bat",
+        "custom/countdown",
         "pulseaudio",
         "custom/pymor",
         "custom/separator",
@@ -45,6 +46,12 @@
     "return-type": "json",
     "tooltip": false
   },
+"custom/countdown": {
+    "exec": "/home/digo/.config/waybar/custom_widgets/countdown.sh",
+    "interval": 1,
+    "return-type": "json",
+    "tooltip": false
+    }, 
 "sway/mode": {
     "format": "<span size='12000' rise='5000'></span> <span size='14000' foreground='#4c566a' rise='6000'>| </span>",
 },
