--- a/.config/waybar/config.jsonc
+++ b/.config/waybar/config.jsonc
@@ -165,7 +165,7 @@
             "4": "",
             "5": "",
             "6": "",
-            "7": "",
+            "7": "<span size='12000'></span>",
             "8": "",
 
             "urgent": "",
