--- a/.config/sway/config
+++ b/.config/sway/config
@@ -1,9 +1,5 @@
 # Read `man 5 sway` for a complete reference.
 exec ~/.config/sway/autostart
-exec swayidle -w \
-    timeout 300 'swaylock --image VGA-1:/home/digo/.wallpapers/vert.png --image HDMI-A-1:/home/digo/.wallpapers/hor.png' \
-    timeout 600 'swaymsg "output * power off"' resume 'swaymsg "output * power on"' \
-    before-sleep 'pgrep swaylock || swaylock --image VGA-1:/home/digo/.wallpapers/vert.png --image HDMI-A-1:/home/digo/.wallpapers/hor.png'
 
 # Own variables
 set $mod Mod4
@@ -30,8 +26,8 @@ default_border pixel
 hide_edge_borders --i3 smart
 
 # Monitor
-output HDMI-A-1 res 1280x1024@75HZ pos 0 0 transform 270 bg ~/.wallpapers/vert.png fill allow_tearing yes max_render_time off
-output VGA-1 res 1360x768@60HZ pos 1024 0 bg ~/.wallpapers/hor.png fill allow_tearing yes max_render_time off
+output HDMI-A-1 res 1280x1024@75HZ pos 0 0 transform 270 bg ~/.wallpapers/ign_unsplash21.png fill allow_tearing yes max_render_time off
+output VGA-1 res 1360x768@60HZ pos 1024 0 bg ~/.wallpapers/ign_unsplash21.png fill allow_tearing yes max_render_time off
 # Read `man 5 sway-input` for more information about this section.
 input type:pointer {
     accel_profile "flat" # disable mouse acceleration (enabled by default; to set it manually, use "adaptive" instead of "flat")
@@ -51,8 +47,6 @@ for_window [app_id="btop"]  move scratchpad, resize set width 50%, scratchpad sh
 for_window [app_id="notes"]  move scratchpad, resize set width 1200, scratchpad show
 for_window [app_id="habits"]  move scratchpad, resize set width 1200, scratchpad show
 for_window [app_id="wasistlos"]  move scratchpad, resize set width 1200, scratchpad show
-for_window [app_id="Kuro"]  move scratchpad, resize set width 1200, scratchpad show
-for_window [app_id="todo"]  move scratchpad, resize set width 1200, scratchpad show
 
 ## Binds
 mode "scratchpad" {
@@ -67,6 +61,7 @@ mode "scratchpad" {
         bindsym t exec --no-startup-id "sway-scratchpad -tmt -atc -d 50%x90% -p -180,0 -m left -- foot -T todo -e taskwarrior-tui", mode "default"
         bindsym u exec --no-startup-id "sway-scratchpad -tmt -atc -d 90%x60% -p 0,20 -- alacritty --config-file ~/.config/alacritty/scratchpad.toml --class dropdown_term -e bash -c 'zellij attach --create scratch'", mode "default"
         bindsym l exec --no-startup-id "sway-scratchpad -tmt -atc -d 50%x40% -p 0,20 -- foot -T lowfi -e lowfi", mode "default"
+        bindsym r exec --no-startup-id "sway-scratchpad -tmt -atc -d 50%x40% -p 0,20 -- foot -T countdown -e countdown.py", mode "default"
 
         bindsym Return mode "default"
         bindsym Escape mode "default"
@@ -127,11 +122,12 @@ mode "move_workspaces" {
 ## action
 mode "action" {
     bindsym k kill, mode "default"
-        bindsym r reload, mode "default"
-        bindsym f fullscreen, mode "default"
+    bindsym r reload, mode "default"
+    bindsym f fullscreen, mode "default"
+    bindsym b exec "killall -SIGUSR2 waybar", mode "default"
 
-        bindsym Return mode "default"
-        bindsym Escape mode "default"
+    bindsym Return mode "default"
+    bindsym Escape mode "default"
 }
 
 ## exec
@@ -145,13 +141,13 @@ mode "exec" {
 ## layout
 mode "layout" {
     bindsym t layout tabbed, mode "default"
-        bindsym s layout stacking, mode "default"
-        bindsym o layout toggle split, mode "default"
-        bindsym v splitv, mode "default"
-        bindsym b splith, mode "default"
+    bindsym s layout stacking, mode "default"
+    bindsym o layout toggle split, mode "default"
+    bindsym v splitv, mode "default"
+    bindsym b splith, mode "default"
 
-        bindsym Return mode "default"
-        bindsym Escape mode "default"
+    bindsym Return mode "default"
+    bindsym Escape mode "default"
 }
 
 ## volume
