--- a/.config/sway/config
+++ b/.config/sway/config
@@ -142,7 +142,7 @@ mode "exec" {
 mode "layout" {
     bindsym t layout tabbed, mode "default"
     bindsym s layout stacking, mode "default"
-    bindsym o exec swaymsg layout toggle splitv tabbed, mode "default"
+    bindsym o layout toggle splitv tabbed, mode "default"
     bindsym v splitv, mode "default"
     bindsym b splith, mode "default"
 
