--- a/.config/swayidle/config
+++ b/.config/swayidle/config
@@ -1,3 +1,3 @@
 timeout 300 'swaylock -f'
-timeout 600 'swaymsg "output * dpms off"' resume 'swaymsg "output * dpms on"'
+timeout 600 'swaymsg "output * dpms off"' resume 'swaymsg "output * dpms on"; xrandr --output VGA-1 --primary'
 before-sleep 'swaylock -f'
